--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ body{
   font-weight: 600;
   background: white;
   color: var(--colorSecondary);
-  padding: 1.2em 2.4em;;
+  padding: 0.8em 1.5em;
 
   /* Button Shadows/Button White 01 */
   box-shadow: 0px 4px 10px 0px rgba(20, 20, 43, 0.04);
@@ -201,7 +201,8 @@ body{
   border: 2.5px solid #FFF;
   background: transparent;
   color: white;
-  padding: 0.7em 2.5em;
+  padding: 0.8em 2em;
+  
   /* Button Shadows/Button White 01 */
   box-shadow: 0px 4px 10px 0px rgba(20, 20, 43, 0.04);
 }
@@ -318,7 +319,7 @@ body{
 
 .follow-button-container{
   display: flex;
-  gap: 8px;
+  gap: 16px;
   margin-top: 24px;
 }
 
@@ -348,7 +349,7 @@ body{
   font-family: var(--ff);
   font-weight: bold;
   background: var(--colorAccent);
-  padding: 1em 2.3em;
+  padding: 24px 56px;
   box-shadow: 6px 6px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
@@ -388,7 +389,7 @@ body{
 }
 .title-text-action > h2{
   font-family: var(--ff);
-  color: var(--colorSecondary);
+  color: var(--colorPrimary);
 }
 .title-text-action > p{
   margin-top: 0;
@@ -403,12 +404,12 @@ body{
   margin: 50px 0 0 50px;
   gap: 20px;
 }
-.action-btn-contact > a{
-  text-decoration: underline;
+.mail-link{
   font-family: var(--ff);
   display: inline-flex;
   align-items: center;
   gap: 8px;
+  text-decoration: underline;
 }
 
 .contactbutton{
@@ -456,6 +457,7 @@ body{
 .mail-content-container > p{
   font-family: var(--ff);
   color: var(--colorSecondary);
+  text-align: center;
 }
 .mail-content-container > input{
   background-color: #F9F9FF;
@@ -711,10 +713,12 @@ hr{
   /* Follow-section */
   .btn-folllow-Gallery{
     font-size: 1rem;
+    padding: 1em 2.5em;
   }
 
   .btn-follow-us{
-    font-size: 1rem;
+    font-size: 1rem;;
+    padding: 1em 2.5em;
   }
     
 }
@@ -793,7 +797,11 @@ hr{
     width: 100%;
     border-radius: 0;
     left: 0;
-}
+ }
+
+ .contactbutton{
+  padding: 16px 36px 16px 36px;
+ }
 
   
 }
