--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   width: 100%;
   padding: 14px 0px;
   background-color: #FF7F3E;
+  right: 0;
 }
 
 :root{
@@ -74,6 +75,7 @@ body{
   top: 0;
   left: 0;
   width: 100%;
+  right: 0;
   background-color: #fff;
 }
 
