Without under construction

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-.service{
+/* .service{
   position: fixed;
   text-align: center;
   left: 0;
@@ -10,7 +10,7 @@
   padding: 14px 0px;
   background-color: #FF7F3E;
   right: 0;
-}
+} */
 
 :root{
   /* colours */
